--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "expo start --dev-client",
     "build:dev:android": "eas build -p android --profile development",
-    "build:dev:ios": "eas build -p ios --profile sim"
+    "build:dev:ios": "eas build -p ios --profile sim",
+    "emu": "npx expo start --dev-client"
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
@@ -22,9 +23,20 @@
     "react-native-randombytes": "^3.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.21.0",
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/jest-native": "^5.0.0",
+    "@testing-library/react-native": "^12.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/react": "^18.3.12",
+    "babel-jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "metro-react-native-babel-preset": "^0.76.0",
+    "react-test-renderer": "^18.0.0",
+    "ts-jest": "^29.0.0",
+    "typescript": "^5.0.0"
   },
   "private": true
 }
