--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Particle BLE Setup - Ref App",
-    "slug": "bindicator-wifi-setup",
+    "slug": "ble-setup",
     "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -38,7 +38,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#08223d"
       },
-      "package": "com.bbakkala.bindicatorwifisetup",
+      "package": "bindicator-439415.ue.r.appspot.com",
       "versionCode": 1,
       "permissions": [
         "android.permission.BLUETOOTH",
@@ -51,9 +51,8 @@
     },
     "extra": {
       "eas": {
-        "projectId": "cd49e7aa-b8c5-4ab8-9878-4aeaef0fff25"
+        "projectId": "93c56541-4f0d-4034-b346-c1472d925078"
       }
-    },
-    "owner": "bbakkala"
+    }
   }
 }
