--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "start": "expo start --dev-client",
     "build:dev:android": "eas build -p android --profile development",
-    "build:dev:ios": "eas build -p ios --profile sim",
-    "emu": "npx expo start --dev-client"
+    "build:dev:ios": "eas build -p ios --profile sim"
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
@@ -17,26 +16,16 @@
     "expo-random": "~13.2.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-randombytes": "^3.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.21.0",
-    "@babel/preset-react": "^7.21.0",
-    "@babel/preset-typescript": "^7.21.0",
-    "@testing-library/jest-native": "^5.0.0",
-    "@testing-library/react-native": "^12.0.0",
-    "@types/jest": "^29.0.0",
-    "@types/react": "^18.3.12",
-    "babel-jest": "^29.0.0",
-    "jest": "^29.0.0",
-    "metro-react-native-babel-preset": "^0.76.0",
-    "react-test-renderer": "^18.0.0",
-    "ts-jest": "^29.0.0",
-    "typescript": "^5.0.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
