--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "jsx": "react",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "types": ["jest", "node"]
+    "strict": true
   }
 }
