--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-ble-plx": "^2.0.3",
-    "react-native-randombytes": "^3.6.1" 
+    "react-native-randombytes": "^3.6.1",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
