--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@particle/react-native-ble-setup-library": "^0.2.1",
+    "@react-native-async-storage": "github:react-native-async-storage/async-storage",
     "eas-cli": "^3.12.0",
     "expo": "^49.0.0",
     "expo-crypto": "~12.4.1",
@@ -21,7 +22,7 @@
     "react-native": "0.72.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-randombytes": "^3.6.1",
-    "react-native-svg": "^15.9.0"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
