OH MY GOD IT PULLS FROM GITHUB

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "Particle BLE Setup - Ref App",
-    "slug": "ble-setup",
+    "name": "BBBBB Wifi Setup",
+    "slug": "bindicator-wifi-setup",
     "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "scheme": "exp+ble-setup",
+    "scheme": "exp+bindicator-wifi-setup",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -24,7 +24,8 @@
           ],
           "isBackgroundEnabled": true
         }
-      ] 
+      ],
+      "expo-secure-store"
     ],
     "ios": {
       "supportsTablet": true,
@@ -38,7 +39,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#08223d"
       },
-      "package": "bindicator-439415.ue.r.appspot.com",
+      "package": "com.bbakkala.bindicatorwifisetup",
       "versionCode": 1,
       "permissions": [
         "android.permission.BLUETOOTH",
@@ -51,7 +52,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "93c56541-4f0d-4034-b346-c1472d925078"
+        "projectId": "cd49e7aa-b8c5-4ab8-9878-4aeaef0fff25"
       }
     }
   }
