--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 3.12.0"
+    "version": ">= 3.12.0",
+      "appVersionSource": "remote"
   },
   "build": {
     "sim": {
@@ -16,7 +17,9 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
