--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["src", "types"],
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react", // or "react-jsx" for React 17+
