--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "expo start --dev-client",
     "build:dev:android": "eas build -p android --profile development",
-    "build:dev:ios": "eas build -p ios --profile sim"
+    "build:dev:ios": "eas build -p ios --profile sim",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
