--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.11",
     "expo-random": "~13.2.0",
-    "expo-splash-screen": "~0.20.5",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "^0.29.13",
     "expo-status-bar": "~1.6.0",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.17",
     "react-native-ble-plx": "^2.0.3",
     "react-native-randombytes": "^3.6.1"
   },
