--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   "dependencies": {
     "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@particle/react-native-ble-setup-library": "^0.2.1",
-    "eas-cli": "^3.12.0",
     "expo": "^51.0.0",
-    "expo-crypto": "~12.4.1",
-    "expo-dev-client": "~2.4.11",
-    "expo-random": "~13.2.0",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "^0.29.13",
-    "expo-status-bar": "~1.6.0",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.29",
+    "expo-random": "~14.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
+    "expo-status-bar": "~1.12.1",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
+    "graphql": "^16.9.0",
     "react": "18.2.0",
-    "react-native": "^0.72.17",
+    "react-native": "0.74.5",
     "react-native-ble-plx": "^2.0.3",
     "react-native-randombytes": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
