--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@particle/react-native-ble-setup-library": "^0.2.1",
     "expo": "50.0",
-    "expo-asset": "8.11",
-    "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-random": "~14.0.1",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
+    "expo-asset": "~9.0.2",
+    "expo-crypto": "~12.8.1",
+    "expo-dev-client": "~3.3.12",
+    "expo-random": "~13.6.0",
+    "expo-secure-store": "~12.8.1",
+    "expo-splash-screen": "~0.26.5",
+    "expo-status-bar": "~1.11.1",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "graphql": "^16.9.0",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "0.73.6",
     "react-native-ble-plx": "^2.0.3",
     "react-native-randombytes": "^3.6.1"
   },
