--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
+    "firebase": "^11.1.0",
     "graphql": "^16.9.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
