--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Particle BLE Setup - Ref App",
+    "name": "Bindicator Setup",
     "slug": "bindicator-wifi-setup",
     "version": "2.0.0",
     "orientation": "portrait",
@@ -25,7 +25,7 @@
           "isBackgroundEnabled": true
         }
       ],
-      "expo-secure-store" 
+      "expo-secure-store"
     ],
     "ios": {
       "supportsTablet": true,
